--- a/LoginSystem/Loginify/static/Loginify/base.css
+++ b/LoginSystem/Loginify/static/Loginify/base.css
@@ -19,7 +19,7 @@ body {
     padding: 60px;
     border-radius: 15px;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
-    max-width: 400px;
+    max-width: 4\800px;
 }
 
 /* Styling the main heading */
